# Event-Maker

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  local.yml  manage.py  production.yml  pyproject.toml  pytest.ini  setup.cfg  tasks.py
.envs/.local/: .django  .postgres
.github/workflows/: ci.yml
apps/core/: views.py
apps/core/services/: email.py  pagination.py
apps/events/: admin.py  apps.py  factories.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  views.py
apps/events/filters/: __init__.py  invite.py
apps/events/migrations/: 0001_initial.py
apps/events/models/: invite.py
apps/events/tests/: test_events.py  test_invites.py
apps/events/viewsets/: invite.py
apps/users/: admin.py  factories.py  models.py  serializers.py  views.py
apps/users/tests/: factories.py  test_drf_urls.py  test_swagger.py
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: opeanapi.yml  ws.yml
nginx/: Dockerfile  nginx.conf
provision/: django.py  docker.py  project.py
server/: Dockerfile  manage.py  pyproject.toml  pytest.ini  setup.cfg
server/apps/chat/: admin.py  factories.py  models.py  routing.py  serializers.py
server/apps/chat/admin/: __init__.py  message.py
server/apps/chat/factories/: __init__.py  message.py
server/apps/chat/migrations/: 0001_initial.py
server/apps/chat/models/: __init__.py
server/apps/chat/serializers/: __init__.py  message.py
server/apps/core/: views.py
server/apps/core/consumer/: __init__.py  base_consumer.py
server/apps/core/middleware/: __init__.py  jwt_cookie_authentication.py  jwt_query_param_authentication.py
server/apps/core/services/: email.py
server/apps/events/: admin.py  apps.py  factories.py  permissions.py  routing.py  serializers.py  signals.py  tasks.py
server/apps/users/: serializers.py  views.py
server/config/: api_router.py  asgi.py  routing.py  urls.py
server/config/settings/: __init__.py  celery.py  drf.py  installed_apps.py  main.py  settings.py
server/config/tests/: __init__.py
server/scripts/: fill_sample_data.py
server/templates/events/: invite.html
templates/: email_base.html
templates/events/: event_soon.html
(+41 files in other folders)
